a user can update the group name

--- a/frontend/src/styles/globals.css
+++ b/frontend/src/styles/globals.css
@@ -14,3 +14,13 @@ body {
 #__next {
   height: 100%;
 }
+
+.genericButton {
+  border: solid 1px transparent;
+  border-radius: 6px;
+  padding: 6px;
+  transition: all 0.2s;
+}
+.genericButton:hover {
+  background-color: #f0f0f0;
+}
